--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
                 <div
                     class="col-md-6">
                     <p class="text-left d-flex justify-content-center align-items-center align-content-center description" style="color:#000000;font-family:Roboto, sans-serif;">Se você também é apaixonado por filmes e fica perdido diante da grande variedade disponível quando acessa um sistema de streaming, o QFilmes está aí para te ajudar, &nbsp;indicando um <br>filme de acordo com sua preferência de gênero,
-                        baseado em uma seleção especial, &nbsp;preparada com todo carinho para você. <br>A cada semana será sugerido um novo filme de grande aprovação do público.<br></p>
+                        baseado em uma seleção especial, &nbsp;preparada com todo carinho para você. <br>Na página inicial será sugerido um novo filme de grande aprovação do público.<br></p>
                     <p class="description" style="color:#000000;font-family:Roboto, sans-serif;">Criador: Diana Poltronieri Rosalem - Aluna de &nbsp;Ciências da Computação na Universidade de Vila Vilha (UVV)</p>
                     <p class="description" style="color:#000000;font-family:Roboto, sans-serif;">Ano de criação: 2020</p>
                     <p class="description" style="color:#000000;font-family:Roboto, sans-serif;">OBS: Todas as imagens e sinopse foram retiradas da Netfilx e as notas dos filmes retiradas do Google.</p>
