--- a/indicarest.html
+++ b/indicarest.html
@@ -34,7 +34,7 @@
     <div class="d-flex d-print-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex align-content-center align-self-center features-boxed" style="color:#f4f4f4;background-color:#d5d5d5;">
         <div class="container d-block" style="color:#f4f4f4;">
             <h1 class="text-center" style="font-size:30px;color:#000000;height:60px;margin-top:20px;">Sua indicação</h1>
-            <h1 class="text-center" style="font-size:20px;color:#000000;height:60px;">Apague as luzes, pegue seu coberta e que os jogos comecem!</h1>
+            <h1 class="text-center" style="font-size:20px;color:#000000;height:60px;">Apague as luzes, pegue sua coberta e que os jogos comecem!</h1>
         </div>
     </div>
     <div>
